--- a/package.json
+++ b/package.json
@@ -1,34 +1,39 @@
 {
-  "name": "netflix-clone",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@prisma/client": "^6.6.0",
-    "bcrypt": "^5.1.1",
-    "next": "15.2.1",
-    "next-auth": "^4.24.11",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.1",
-    "postcss": "^8.5.3",
-    "prisma": "^6.6.0",
-    "tailwindcss": "^4.0.12",
-    "typescript": "^5"
-  }
+	"name": "netflix-clone",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"format": "prettier .  --write",
+		"prisma:generate": "prisma generate",
+		"prisma:studio": "prisma studio"
+	},
+	"dependencies": {
+		"@prisma/client": "^6.6.0",
+		"axios": "^1.9.0",
+		"bcrypt": "^5.1.1",
+		"next": "15.2.1",
+		"next-auth": "^4.24.11",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@tailwindcss/postcss": "^4",
+		"@types/bcrypt": "^5.0.2",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9",
+		"eslint-config-next": "15.2.1",
+		"postcss": "^8.5.3",
+		"prettier": "^3.5.3",
+		"prisma": "^6.6.0",
+		"tailwindcss": "^4.0.12",
+		"typescript": "^5"
+	}
 }
