--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
 		"prisma:studio": "prisma studio"
 	},
 	"dependencies": {
+		"@next-auth/prisma-adapter": "^1.0.7",
 		"@prisma/client": "^6.6.0",
 		"axios": "^1.9.0",
 		"bcrypt": "^5.1.1",
 		"next": "15.2.1",
 		"next-auth": "^4.24.11",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"react-icons": "^5.5.0"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
